2003-07-17  Christian Schaller <Uraeus@gnome.org>

	* Re-integrate Amaranth into build
	* Add more stock icons to Amaranth
	* Change Lush description, sorry translators, but the
	  current one sucked
 	
2003-07-16  Christian Schaller <Uraeus@gnome.org>
	
	* Add icons to Wasp
	* Remove some icons commited with wrong name under Wasp
	* Add a few emblems to Wasp

2003-07-17  Takeshi AIHANA <aihana@gnome.gr.jp>

	* configure.in: Added Japanese  "ja" into ALL_LINGUAS.

2003-07-15  Danilo Šegan  <dsegan@gmx.net>

	* configure.in: Added "sr" and "sr@Latn" to ALL_LINGUAS.

2003-07-15  Jakub Steiner <jimmac@ximian.com>

	* Gorilla/metacity-1/metacity-theme-1.xml: add button prelight
	  states

2003-07-14 Christian Schaller <Uraeus@gnome.org>
	
	* Change version to 0.3
	* Add new and updated Nuvola icons from David Vignoni
	* Fix many BlueSphere icons to use userspaceonuse instead 
	  of objectboundingbox

2003-07-13 Christian Schaller <Uraeus@gnome.org>

	* Added updated and new icons to Nuvola from David
	* Added symlinks to Nuvola for better coverage
	* Added file manager, favorites, my-computer icon to Wasp
	* Cleaned up symlink scripts in Makefiles
	* Commented out Amaranth as it will not be part of 0.2
	
2003-07-11 Christian Schaller <Uraeus@gnome.org>

	* Added Amaranth theme (alpha version)
	* Add apps directory to Lush theme
	* Add extra icon to Wasp theme

2003-07-10 Christian Schaller <Uraeus@gnome.org>

	* Added almost complete GNOME menu set to Nuvola
	* Added abiword mime type to Lush and Nuvola
	* Added Wasp multimedia menu icon
	* Cleaned up Wasp apps menu icons somewhat

2003-07-08 Christian Schaller <Uraeus@gnome.org>

	* Removed mid-stop point info from most icons, 
	  should reduce spew considerably, fix by
	  Adam Hooper
	* Traditional Chinese translation by baddog

2003-07-07 Christian Schaller <Uraeus@gnome.org>
	
	* Add print-preview icon to Nuvola

2003-07-02  Artur Flinta  <aflinta@cvs.gnome.org>

	* configure.in: Added pl to ALL_LINGUAS
