@@ -7,12 +7,12 @@ icon_DATA = \
 EXTRA_DIST = $(icon_DATA)
 
 install-data-local:
-	mkdir -p $(icondir)
-	cd $(icondir) && \
+	mkdir -p $(DESTDIR)$(icondir)
+	cd $(DESTDIR)$(icondir) && \
 	ln -sf gnome-gimp.svg gnome-palette.svg && \
 	ln -sf mozilla-star.png redhat-web-browser.svg
 
 uninstall-local:
-	rm -rf $(icondir)/redhat-web-browser.svg && \
-	rm -rf $(icondir)/gnome-palette.svg
+	rm -rf $(DESTDIR)$(icondir)/redhat-web-browser.svg && \
+	rm -rf $(DESTDIR)$(icondir)/gnome-palette.svg
 	
