@@ -1,10 +1,14 @@
+2003-07-18  Christophe Merlet  <redfox@redfoxcenter.org>
+
+	* */*/*/*/Makefile.am: Add DESTDIR variable.
+
 2003-07-17  Christian Schaller <Uraeus@gnome.org>
 
 	* Re-integrate Amaranth into build
 	* Add more stock icons to Amaranth
 	* Change Lush description, sorry translators, but the
 	  current one sucked
- 	
+
 2003-07-16  Christian Schaller <Uraeus@gnome.org>
 	
 	* Add icons to Wasp
